Fix "save and continue" button being covered by the checkbox label; revise report page display; Text changes on layout and home pages

--- a/Cox/Content/Site.css
+++ b/Cox/Content/Site.css
@@ -221,6 +221,7 @@ TABLES
 
 .assessment tbody tr th div {
 	padding-right: 30px;
+    word-wrap: break-word;
 }
 
 .assessment tbody tr th:first-of-type{
@@ -345,14 +346,14 @@ td input[type=checkbox] {
 
 
 td label { 
-  width: 13.3%;
+  width: 10%;
   min-height: 40px;
   display: block;
   cursor: pointer;
   padding: 0px;
   margin: 0px;
   position: absolute;
-  height:100%;
+  height:14%;
 }
 
 td.decision div {
@@ -666,11 +667,11 @@ span.check-big{
 }
 
 span.cross{
-    color:#4B5EBF;
+    color:#ff7800;
     font-weight:bold;
 }
 span.cross-big{
-    color:#4B5EBF;
+    color:#ff7800;
     font-weight:bold;
     font-size:15pt;
 }
@@ -804,6 +805,7 @@ table.report-grid thead tr td {
   border-bottom: #ff7800 4px solid;
   border-right: 0px;
   color: #ffffff;
+  padding-top: 10px;
 }
 
 table.report-grid thead tr td:first-of-type{
@@ -816,6 +818,7 @@ table.report-grid thead tr td:last-of-type{
 
 table.report-grid {
   margin-top: 30px;
+  width:100%;
 }
 
 
